--- a/live-vr/Base.lproj/Main.storyboard
+++ b/live-vr/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -71,7 +70,7 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hBB-Fs-FfC"/>
-                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="ACj-kO-hIy" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="0pi-jg-8vM"/>
                             <constraint firstItem="hBB-Fs-FfC" firstAttribute="bottom" secondItem="CJj-u0-6to" secondAttribute="bottom" constant="12" id="15n-Hc-9Ao"/>
@@ -90,6 +89,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="cameraSwitchButton" destination="CJj-u0-6to" id="hBk-Ps-lPn"/>
                         <outlet property="mySceneView" destination="ACj-kO-hIy" id="Ngt-pH-M0Y"/>
                         <outletCollection property="cameraButtons" destination="CJj-u0-6to" collectionClass="NSMutableArray" id="96A-YX-owo"/>
                         <outletCollection property="cameraButtons" destination="i4s-9d-KNa" collectionClass="NSMutableArray" id="t3r-la-Y9S"/>
@@ -104,8 +104,5 @@
     </scenes>
     <resources>
         <image name="reverse-camera" width="49" height="38.5"/>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
